# stercus

./: .gitignore  README.md  example.cus  pyproject.toml  stercus-run.py  stercus.py  test.cus
compiler/: test.cus  test.lex
compiler/src/: stercusc
compiler/src/stercus/: __init__.py  compiler.py  constants.py  lexer.py  parser.py  preprocessor.py
compiler/stercus/: __init__.py  compiler.py  errors.py  parser.py
compiler/tests/: compiler.py  just_comments.cus  lexer.py  parser.py  preprocessor.py  runner.py  testutil.py
docs/: doc.md
examples/brainfuck/: notes.txt  test.cus
examples/math/: a.out  add.cus  divide.cus  double.cus  multiply.cus  out.c  subtract.cus
examples/simple/: echo.cus  hello_world.cus  variable.cus
examples/string/: print.cus
src/stercus/: __init__.py  compiler.py  constants.py  errors.py  lexer.py  parser.py  preprocessor.py  stercusc.py  text2stercus.py
tests/: test_compiler.py  test_lexer.py  test_parser.py  test_preprocessor.py
tools/: text2stercus.py
